# bazel-vite-vitest

./: .bazeliskrc  .gitignore  BUILD.bazel  package.json  pnpm-lock.yaml  vite.config.ts
src/: basic.test.tsx
